# portfolio-manager-gui

./: .gitignore  CHANGELOG.md  README.md  TODO.md  app_state.py  fetch_data.py  main.ipynb  main.py  newrow.py  openfigi.py  operations.py  pyproject.toml  requirements.txt  stats_correct_(yfinance).txt  stats_wrong.txt  test.ipynb  utils.py
.github/workflows/: build-release.yml
AlgoTradingYT/: 001_equal_weight_S&P_500.ipynb  002_quantitative_momentum_strategy.ipynb  FMPdemo.ipynb  fmputils.py  recommended_trades.xlsx  secret.py  sp_500_stocks.csv
LSTM/: LSTMdemo.ipynb
components/: focus_chain.py  snack.py  ticker_search.py
config/: brokers.json  config.ini
config/resources/: Report BG Saxo.csv  Report Fineco.csv  Template.csv
docs/: privacy_policy.md
locales/: en.json  fee_mode_help_en.txt  fee_mode_help_it.txt  it.json  privacy_policy_en.txt  privacy_policy_it.txt
reports/: .~lock.report.csv#  Report All Accounts.csv  Report BG Saxo.csv  Report Fineco.csv  Storico Portafoglio.csv  Template.csv  brokers.json  report copy.csv  report-fancy.csv  report-template.csv  report.csv
services/: account_service.py  analysis_service.py  chart_service.py  config_service.py  market_data.py  operations_service.py
utils/: account.py  analysis.py  asset_utils.py  columns.py  constants.py  date_utils.py  dialogs.py  fetch_utils.py  menu_operations.py  newton.py  operations.py  operations_account.py  operations_menu.py  other_utils.py  translator.py
views/: __init__.py  analysis_view.py  home_view.py  operations_view.py  settings_view.py  transactions_view.py
