[project]
name = "portfolio-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.28.0",
    "flet-charts>=0.80.5",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
]

[tool.flet.app]
exclude = [
    "tests",
    ".git",
    "__pycache__",
    ".venv",
    "*.csv",
    "*.md",
    "media",
    "assets/*-old*",
]

[tool.flet.compile]
app = true
packages = true

[tool.flet.cleanup]
app = true
packages = true
app_files = [
    "**/__pycache__",
    "**/*.md",
    "**/*.rst",
]
package_files = [
    "**/*.pyi",
    "**/*.typed",
    "**/__pycache__",
    "**/*.md",
    "**/*.rst",
    "**/*.txt",
    "**/*.html",
    "**/tests",
    "**/test",
    "**/*.c",
    "**/*.h",
    "**/*.hpp",
]

[tool.flet.flutter.pubspec.dependency_overrides]
connectivity_plus = "7.0.0"

[tool.flet.android]
target_arch = ["arm64-v8a"]

[tool.flet.android.permission]
"android.permission.VIBRATE" = true
